--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "chardetng-wasm"
+description = "Makes chardetng, Firefox's character encoding detection, available to JS through Web Assembly"
 version = "0.1.0"
 authors = ["William Wall <wwall@caci.com>"]
 edition = "2018"
+license = "Apache-2.0"
+readme = "README.md"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
