--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wallw-bits/chardetng-wasm.git"
+  },
   "release": {
     "plugins": [
       "@semantic-release/commit-analyzer",
