--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_script:
   # nvm
   - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
   - export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
-  - $NVM_DIR/nvm.sh
-  - nvm install stable
-  - nvm use stable
+  - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
+  - nvm install --lts stable
+  - nvm use --lts stable
   - npm install
 script:
   - commitlint-travis
