--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,12 +63,8 @@ jobs:
     - name: Build and Test
       run: npm build
 
-  release:
-    if: ${{ github.ref == 'master' }}
-    needs: build
-
-    steps:
-    - name: Semantic Release
+    - name: Release
+      if: ${{ github.ref == 'master' }}
       run: npm run semantic-release
       with:
         env:
