ci(github): add debug for ref [skip ci]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,10 @@ jobs:
         NODE_PATH: ${{ github.workspace }}/node_modules
 
     - name: Build and Test
-      run: npm build
+      run: npm run build
+
+    - name: Echo
+      run: echo {{ github.ref }}
 
     - name: Release
       if: ${{ github.ref == 'master' }}
