--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
       uses: Swatinem/rust-cache@v1
 
     - name: Install Dependencies
-      run: npm install
+      run: npm ci
 
     - name: Lint Commits
       uses: wagoid/commitlint-github-action@v2
