--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "github:semantic-release/npm",
+    "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "husky": "^3.0.2",
     "json": "^10.0.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.0",
+    "semantic-release": "^17.4.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
   },
